[project]
name = "ClickUpDataExporter"
version = "0.1.0"
authors = [
    { name = "Abdullah Ajmal", email = "abdullah.ajmal@carteblanche.tech" },
]
maintainers = [
    { name = "Abdullah Ajmal", email = "abdullah.ajmal@carteblanche.tech" },
]
description = ""
readme = "README.md"
keywords = ["django", "celery", "clickup", "httpx", "uv", "docker", "asgi"]
requires-python = "==3.14.*"
dependencies = [
    "Django==5.2.8",
    "celery[redis,auth,gevent]==5.5.3",
    "flower==2.0.1",
    "gunicorn[setproctitle]==23.0.0",
    "uvicorn-worker==0.4.0",
    "httpx[brotli]==0.28.1"
]
[dependency-groups]
dev = [
    "watchfiles==1.1.0"
]
lint = [
    "ruff==0.14.0"
]

[tool.ruff]
extend-exclude = ["__init__.py", "settings/*.py"]
